Att UserControler - Perfil

--- a/ProjetoHackatonIncredibleHihgSpeedTeam/ProjetoHackatonIncredibleHihgSpeedTeam/Views/User/Lista_Empresas.cshtml
+++ b/ProjetoHackatonIncredibleHihgSpeedTeam/ProjetoHackatonIncredibleHihgSpeedTeam/Views/User/Lista_Empresas.cshtml
@@ -9,9 +9,9 @@
 <div class="container" id="lista_empresas_contratar">
     <table class="table table-hover">
         <tr>
-            <th>Firstname</th>
-            <th>Lastname</th>
-            <th>Age</th>
+            <th>Empresa</th>
+            <th>Vaga</th>
+            <th>Qualificações</th>
         </tr>
     </table>
 </div>
