--- a/ProjetoHackatonIncredibleHihgSpeedTeam/ProjetoHackatonIncredibleHihgSpeedTeam/Views/Shared/_Layout.cshtml
+++ b/ProjetoHackatonIncredibleHihgSpeedTeam/ProjetoHackatonIncredibleHihgSpeedTeam/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                         <li><a href="#">Page 3</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="Home/Login_1"><span class="glyphicon glyphicon-glass"></span> Login</a></li>
+                    <li><a href="/Home/Login"><span class="glyphicon glyphicon-login"></span> Login</a></li>
                 </ul>
             </div>
         </div>
