--- a/ProjetoHackatonIncredibleHihgSpeedTeam/ProjetoHackatonIncredibleHihgSpeedTeam/Views/Home/Index.cshtml
+++ b/ProjetoHackatonIncredibleHihgSpeedTeam/ProjetoHackatonIncredibleHihgSpeedTeam/Views/Home/Index.cshtml
@@ -3,6 +3,13 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
-Pagina inicial do site
-Seja bem 
+<div class="jumbotron">
+    <img src="~/Content/Pictures/Logo.png" class="center-block img-responsive"style="width:50%;" /> 
+    <br />
+    <p>
+        Quando o estudante de TI sai da faculdade, muitas vezes está despreparado para entrar no mercado de trabalho, se sentindo inseguro para determinados cargos ou resolve "burlar" o sistema dizendo que sabe aquilo que ele não sabe. Desenvolvemos um aplicativo WEB que busca resolver esta problemática, servindo-se como um Coach/mentor a ele, até que se torne realmente capacitado a assumir uma vaga em uma empresa desejada.
+    </p>
+</div>
+<div>
+    
+</div>
