--- a/ProjetoHackatonIncredibleHihgSpeedTeam/ProjetoHackatonIncredibleHihgSpeedTeam/Views/Home/Login.cshtml
+++ b/ProjetoHackatonIncredibleHihgSpeedTeam/ProjetoHackatonIncredibleHihgSpeedTeam/Views/Home/Login.cshtml
@@ -1,44 +1,29 @@
-﻿
+﻿@model ProjetoHackatonIncredibleHihgSpeedTeam.Models.AlunoMOD
 @{
     ViewBag.Title = "Login";
 }
 
-<head>
-  <meta charset="UTF-8">
-  <title>Login Form</title>
-  
-  
-  
-      <link rel="stylesheet" href="Content/Site.css">
-
-  
-</head>
-
-<body>
-  <body>
-    <div class="login">
-        <div class="login-screen">
-            <div class="app-title">
-                <h1>Login</h1>
-            </div>
-
+<div class="login">
+    <div class="login-screen well">
+        <div class="app-title">
+            <h1>Login</h1>
+        </div>
+        @using (Html.BeginForm("Logar", "Home", FormMethod.Post))
+        {
             <div class="login-form">
                 <div class="control-group">
-                <input type="text" class="login-field" value="" placeholder="username" id="login-name">
-                <label class="login-field-icon fui-user" for="login-name"></label>
+                    @Html.TextBoxFor(x => x.Nome, new { @class = "login-field", @placeholder = "username" })
+                    <label class="login-field-icon fui-user" for="login-name"></label>
                 </div>
 
                 <div class="control-group">
-                <input type="password" class="login-field" value="" placeholder="password" id="login-pass">
-                <label class="login-field-icon fui-lock" for="login-pass"></label>
+                    @Html.TextBoxFor(x => x.Pass, new { @class = "login-field", @placeholder = "password", @type = "password" })
+                    <label class="login-field-icon fui-lock" for="login-pass"></label>
                 </div>
 
-                <a class="btn btn-primary btn-large btn-block" href="#">login</a>
+                <input type="submit" name="login" value="Login" class="btn btn-primary btn-large btn-block" />
                 <a class="login-link" href="#">Lost your password?</a>
             </div>
-        </div>
+        }
     </div>
-</body>
-  
-  
-</body>
+</div>
