--- a/ProjetoHackatonIncredibleHihgSpeedTeam/ProjetoHackatonIncredibleHihgSpeedTeam/Views/User/Perfil.cshtml
+++ b/ProjetoHackatonIncredibleHihgSpeedTeam/ProjetoHackatonIncredibleHihgSpeedTeam/Views/User/Perfil.cshtml
@@ -1,22 +1,16 @@
 ﻿@{
-    ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Perfil";
+    Layout = "~/Views/Shared/_Layout2.cshtml";
 }
-
-<h2>User's Profile</h2>
-
+<div class="page-header">
+    <h1>User's Profile</h1>
+</div>
 <div class="container" id="Profile">
     <div class="col-lg-2 col-sm-2 text-center">
         <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
         <h3>
-            User Name
             <small>Student</small>
         </h3>
     </div>
-
-    
-
-
 </div>
-
-
+<a href="#" onclick="history.go(-1);" class="btn">Voltar</a>
