--- a/ProjetoHackatonIncredibleHihgSpeedTeam/ProjetoHackatonIncredibleHihgSpeedTeam/Views/User/Buscar_Escolas.cshtml
+++ b/ProjetoHackatonIncredibleHihgSpeedTeam/ProjetoHackatonIncredibleHihgSpeedTeam/Views/User/Buscar_Escolas.cshtml
@@ -1,39 +1,37 @@
-﻿@model IEnumerable<ProjetoHackatonIncredibleHihgSpeedTeam.Models.EmpresaMOD>
+﻿@model IEnumerable<ProjetoHackatonIncredibleHihgSpeedTeam.Models.EscolaMOD>
 @{
-    ViewBag.Title = "Vagas";
+    ViewBag.Title = "Escolas";
     Layout = "~/Views/Shared/_Layout2.cshtml";
+    var nmCurso = ViewBag.nmCurso;
 }
 
 <div class="page-header">
-    <h1>Vagas disponíveis:</h1>
+    <h1>Escolas que oferecem o curso de @nmCurso</h1>
 </div>
 <div class="container" id="lista_empresas_contratar">
     <table class="table-responsive table table-striped custab">
         <thead>
             <tr>
                 <th></th>
-                <th>Empresa</th>
-                <th>Carreira</th>
+                <th>Nome</th>
                 <th></th>
             </tr>
         </thead>
         <tbody>
-            @foreach (var empresa in Model)
+            @foreach (var escola in Model)
             {
                 <tr>
                     <th></th>
-                    <th>@empresa.Nome</th>
-                    <th><a href="Qualificaçao?Codigo=@empresa.Carreira.ID">@empresa.Carreira.Nome</a></th>
-                    <th><a href="#">Candidatar-se</a></th>
+                    <th>@escola.Nome</th>
+                    <th><a href="#">Entrar em contato</a></th>
                 </tr>
             }
         </tbody>
         <tfoot>
             <tr>
-                <td colspan="4" class="text-center">Empresas: @Model.Count()</td>
+                <td colspan="3" class="text-center">Escolas: @Model.Count()</td>
             </tr>
         </tfoot>
     </table>
 </div>
-
 <a href="#" onclick="history.go(-1);" class="btn">Voltar</a>
