--- a/ProjetoHackatonIncredibleHihgSpeedTeam/ProjetoHackatonIncredibleHihgSpeedTeam/Views/Shared/_Layout2.cshtml
+++ b/ProjetoHackatonIncredibleHihgSpeedTeam/ProjetoHackatonIncredibleHihgSpeedTeam/Views/Shared/_Layout2.cshtml
@@ -30,7 +30,7 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><p class="navbar-text">Logado como @user</p></li>
-                    <li>@Html.ActionLink("Logout","Login","Home")</li>
+                    <li>@Html.ActionLink("Logout","Deslogar","User")</li>
                 </ul>
             </div>
         </div>
