--- a/ProjetoHackatonIncredibleHihgSpeedTeam/ProjetoHackatonIncredibleHihgSpeedTeam/Views/User/Qualificaçao.cshtml
+++ b/ProjetoHackatonIncredibleHihgSpeedTeam/ProjetoHackatonIncredibleHihgSpeedTeam/Views/User/Qualificaçao.cshtml
@@ -28,7 +28,7 @@
         </tbody>
         <tfoot>
             <tr>
-                <td colspan="4" class="text-center">Qualificações: @Model.Count()</td>
+                <td colspan="4" class="text-center">Requisitos: @Model.Count()</td>
             </tr>
         </tfoot>
     </table>
